Freedom Sanbox Ant Deploy/src/objects/Related_Entity_Points__c.object
<CustomObject>
    <fields>
        <fullName>Accounts_and_Book_Keeping__c</fullName>
        <label>Accounts and Book Keeping</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Planning_Points__c</fullName>
        <label>Business Planning Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity_Conversion_Points__c</fullName>
        <label>Entity Conversion Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Entity Points</relationshipLabel>
        <relationshipName>Related_Entity_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_Renewal_Points__c</fullName>
        <label>Entity Renewal Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>General_Insurance_Points__c</fullName>
        <label>General Insurance Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Income_Tax_Planning_Points__c</fullName>
        <label>Income Tax Planning Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Investment_Points__c</fullName>
        <label>Investment Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Points__c</fullName>
        <label>Life Insurance Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Completion_Points__c</fullName>
        <label>Plan Completion Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planner_Points__c</fullName>
        <label>Planner Points</label>
        <referenceTo>Planner_Points__c</referenceTo>
        <relationshipLabel>Related Entity Points</relationshipLabel>
        <relationshipName>Related_Entity_Points</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Points__c</fullName>
        <label>Real Estate Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIP_Points__c</fullName>
        <label>SIP Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Succession_Planning_Points__c</fullName>
        <label>Succession Planning Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Execution_Points__c</fullName>
        <formula>Life_Insurance_Points__c + General_Insurance_Points__c + SIP_Points__c + Investment_Points__c + Business_Planning_Points__c + Real_Estate_Points__c + Succession_Planning_Points__c + Income_Tax_Planning_Points__c + Accounts_and_Book_Keeping__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Execution Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <formula>ROUND((Total_Execution_Points__c + Entity_Renewal_Points__c + Entity_Conversion_Points__c + Plan_Completion_Points__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Related Entity Points</label>
    <nameField>
        <label>Related Entity Points Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Entity Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>